--- a/clients.html
+++ b/clients.html
@@ -1,171 +1,81 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Solarion — AI Studio for Business Growth</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>Solarion — AI Systems for Business</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
-      background: radial-gradient(1000px 500px at 15% 10%, #1c2350, #0b0e16);
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #0f1115, #1b1f3b);
       color: #ffffff;
-      line-height: 1.6;
-    }
-
-    header {
-      padding: 90px 20px 70px;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 46px;
-      margin-bottom: 18px;
-      letter-spacing: 0.5px;
-    }
-
-    header p {
-      font-size: 20px;
-      color: #c9cbe0;
-      max-width: 780px;
-      margin: 0 auto;
     }
 
     section {
-      max-width: 1000px;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 60px 20px;
+      padding: 80px 20px;
     }
 
-    .card {
-      background: rgba(255,255,255,0.045);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 18px;
-      padding: 36px;
-      margin-bottom: 32px;
-    }
-
-    h2 {
-      font-size: 30px;
-      margin-bottom: 16px;
+    h1 {
+      font-size: 44px;
     }
 
     p {
-      color: #d6d7e3;
+      font-size: 18px;
+      color: #d0d0d0;
     }
 
-    ul {
-      padding-left: 22px;
-    }
-
-    li {
-      margin-bottom: 10px;
+    .box {
+      background: rgba(255,255,255,0.06);
+      padding: 30px;
+      border-radius: 14px;
+      margin-top: 30px;
     }
 
     .cta {
-      text-align: center;
-      padding: 90px 20px;
-      background: linear-gradient(135deg, #1e2a78, #0f172a);
-    }
-
-    .cta h2 {
-      font-size: 36px;
-      margin-bottom: 16px;
-    }
-
-    .cta p {
-      font-size: 18px;
-      margin-bottom: 30px;
-      color: #e1e3f0;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 15px 34px;
-      background: #4f7cff;
-      color: #fff;
+      margin-top: 40px;
+      padding: 18px 32px;
+      background: linear-gradient(135deg, #6f7cff, #9b6dff);
+      color: white;
       text-decoration: none;
-      border-radius: 12px;
-      font-weight: 600;
-      font-size: 16px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 32px 20px;
-      font-size: 14px;
-      color: #8b8fa6;
+      border-radius: 30px;
+      font-weight: bold;
+      display: inline-block;
     }
   </style>
 </head>
 
 <body>
 
-<header>
-  <h1>AI systems for business growth</h1>
+<section>
+  <h1>AI systems for growth & automation</h1>
+
   <p>
-    Solarion — универсальная AI-студия.
-    Мы помогаем компаниям привлекать клиентов, автоматизировать процессы
-    и масштабироваться без лишнего хаоса.
+    I help businesses implement AI-powered systems
+    for lead generation, content and automation.
   </p>
-</header>
 
-<section class="card">
-  <h2>Что мы делаем</h2>
-  <p>
-    Мы не продаём инструменты.
-    Мы проектируем и внедряем <strong>AI-системы под конкретные бизнес-задачи</strong>.
-  </p>
-  <ul>
-    <li>AI-контент для продаж и маркетинга</li>
-    <li>AI-автоматизация заявок и коммуникаций</li>
-    <li>AI-маркетинг и аналитика</li>
-  </ul>
+  <div class="box">
+    <p>
+      ✔ Strategy & AI setup<br>
+      ✔ Marketing & content systems<br>
+      ✔ CRM & process automation
+    </p>
+  </div>
+
+  <div class="box">
+    <p><strong>Contact:</strong><br>
+      📧 solarionmedia@gmail.com<br>
+      📱 Telegram / WhatsApp: +375-29-690-92-00
+    </p>
+  </div>
+
+  <a class="cta" href="index.html">View main site</a>
 </section>
-
-<section class="card">
-  <h2>Для кого</h2>
-  <ul>
-    <li>Стартапы и SaaS</li>
-    <li>Малый и средний бизнес</li>
-    <li>Эксперты, агентства, консалтинг</li>
-    <li>Компании, которым нужен результат, а не хайп</li>
-  </ul>
-</section>
-
-<section class="card">
-  <h2>Как мы работаем</h2>
-  <ul>
-    <li>Разбираем бизнес и цели</li>
-    <li>Проектируем AI-архитектуру</li>
-    <li>Внедряем и тестируем</li>
-    <li>Оптимизируем по данным</li>
-  </ul>
-</section>
-
-<section class="card">
-  <h2>Форматы работы</h2>
-  <ul>
-    <li><strong>AI Strategy & Setup</strong> — быстрый вход в AI</li>
-    <li><strong>Monthly AI Support</strong> — сопровождение и улучшения</li>
-    <li><strong>Custom AI Systems</strong> — под ключ</li>
-  </ul>
-</section>
-
-<div class="cta">
-  <h2>Готовы обсудить проект?</h2>
-  <p>
-    Напишите нам — начнём с короткого анализа и предложим оптимальное решение.
-  </p>
-  <a class="btn" href="mailto:Solarionmedia@gmail.com">
-    Связаться с Solarion
-  </a>
-</div>
-
-<footer>
-  © Solarion Media. All rights reserved.
-</footer>
 
 </body>
 </html>
+
