"Updated clients.html with new design and contacts"

--- a/clients.html
+++ b/clients.html
@@ -1,82 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Solarion — AI Systems for Business</title>
+  <title>Solarion Clients - AI Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #0f1115, #1b1f3b);
+      padding: 0;
+      font-family: "Arial", sans-serif;
+      background: #0f1115;
       color: #ffffff;
+      line-height: 1.6;
+    }
+
+    header, footer {
+      text-align: center;
+      padding: 30px 20px;
+      background: #151821;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+      color: #7aa2ff;
+    }
+
+    header p {
+      margin-top: 10px;
+      font-size: 1.2em;
+      color: #cfcfcf;
     }
 
     section {
       max-width: 900px;
       margin: 0 auto;
-      padding: 80px 20px;
+      padding: 40px 20px;
     }
 
-    h1 {
-      font-size: 44px;
+    h1, h2 {
+      color: #ffffff;
+      margin-bottom: 20px;
     }
 
-    p {
-      font-size: 18px;
-      color: #d0d0d0;
+    p, li {
+      color: #cfcfcf;
+      margin-bottom: 15px;
     }
 
-    .box {
-      background: rgba(255,255,255,0.06);
-      padding: 30px;
-      border-radius: 14px;
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
       margin-top: 30px;
     }
 
-    .cta {
-      margin-top: 40px;
-      padding: 18px 32px;
-      background: linear-gradient(135deg, #6f7cff, #9b6dff);
-      color: white;
-      text-decoration: none;
-      border-radius: 30px;
-      font-weight: bold;
-      display: inline-block;
-    }
-  </style>
-</head>
-
-<body>
-
-<section>
-  <h1>AI systems for growth & automation</h1>
-
-  <p>
-    I help businesses implement AI-powered systems
-    for lead generation, content and automation.
-  </p>
-
-  <div class="box">
-    <p>
-      ✔ Strategy & AI setup<br>
-      ✔ Marketing & content systems<br>
-      ✔ CRM & process automation
-    </p>
-  </div>
-
-  <div class="box">
-    <p><strong>Contact:</strong><br>
-      📧 solarionmedia@gmail.com<br>
-      📱 Telegram / WhatsApp: +375-29-690-92-00
-    </p>
-  </div>
-
-  <a class="cta" href="index.html">View main site</a>
-</section>
-
-</body>
-</html>
-
-
+    .card {
+      background: linear-gradient(145deg, #1b1e26, #0f1115);
+      border-radius: 15px;
+      padding: 20px;
+      width: 280px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5
