--- a/clients.html
+++ b/clients.html
@@ -33,7 +33,7 @@
     }
 
     section {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 0 auto;
       padding: 40px 20px;
     }
@@ -59,6 +59,91 @@
     .card {
       background: linear-gradient(145deg, #1b1e26, #0f1115);
       border-radius: 15px;
-      padding: 20px;
+      padding: 25px;
       width: 280px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.7);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #7aa2ff;
+    }
+
+    .card p {
+      color: #cfcfcf;
+      font-size: 0.95em;
+    }
+
+    .contact {
+      margin-top: 40px;
+      text-align: center;
+    }
+
+    .contact a {
+      display: inline-block;
+      margin: 10px;
+      padding: 10px 15px;
+      background: #7aa2ff;
+      color: #0f1115;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .contact a:hover {
+      background: #5f88e0;
+    }
+
+    footer p {
+      margin: 0;
+      font-size: 0.9em;
+      color: #777;
+    }
+
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Solarion</h1>
+  <p>AI-студия для контента, автоматизации и роста бизнеса</p>
+</header>
+
+<section>
+  <h1>Наши кейсы и пакеты</h1>
+  <div class="card-container">
+    <div class="card">
+      <h3>Пакет "Старт"</h3>
+      <p>AI-контент и маркетинг для малого бизнеса. Быстрый старт, 1–2 кампании в месяц, готовые шаблоны.</p>
+    </div>
+    <div class="card">
+      <h3>Пакет "Про"</h3>
+      <p>Полная автоматизация процессов: заявки, рассылки, аналитика, AI-скрипты и интеграции для вашего бизнеса.</p>
+    </div>
+    <div class="card">
+      <h3>Пакет "Премиум"</h3>
+      <p>AI-стратегия, комплексная поддержка, персональный менеджер, полный контроль и рост чеков.</p>
+    </div>
+  </div>
+
+  <div class="contact">
+    <h2>Связаться с нами</h2>
+    <a href="mailto:Solarionmedia@gmail.com">Email</a>
+    <a href="https://t.me/+375296909200" target="_blank">Telegram</a>
+    <a href="viber://chat?number=%2B375296909200">Viber</a>
+    <a href="https://wa.me/375296909200" target="_blank">WhatsApp</a>
+  </div>
+</section>
+
+<footer>
+  <p>© Solarion Media. Все права защищены.</p>
+</footer>
+
+</body>
+</html>
